リクエストとレスポンスにrequiredを付与
